# IO_BRIDGE

./: .gitignore  .gitmodules  README.md
Bridge/: CMakeLists.txt
Bridge/include/: config.h.in
Bridge/include/Input/: Input.h
Bridge/include/Input/BitBang/: BitBang.h  BitBang_Input.h
Bridge/include/Input/Input_Test/: Input_Test.h
Bridge/include/Input/SPI/: SPI_Input.h
Bridge/include/Output/: Output.h
Bridge/include/Output/Output_Test/: Output_Test.h
Bridge/include/Output/SPI/: SPI.h  SPI_Output.h
Bridge/include/Output/UART/: UART_Output.h
Bridge/lib/Input/: CMakeLists.txt  Input.cpp
Bridge/lib/Input/BitBang/: BitBang.cpp  BitBang_Input.cpp  CMakeLists.txt
Bridge/lib/Input/Input_Test/: CMakeLists.txt  Input_Test.cpp
Bridge/lib/Input/SPI/: CMakeLists.txt  SPI_Input.cpp
Bridge/lib/Output/: CMakeLists.txt  Output.cpp
Bridge/lib/Output/Output_Test/: CMakeLists.txt  Output_Test.cpp
Bridge/lib/Output/SPI/: CMakeLists.txt  SPI.cpp  SPI_Output.cpp
Bridge/lib/Output/UART/: CMakeLists.txt  UART_Output.cpp
Bridge/src/: CMakeLists.txt  adapter.cpp  isr.cpp  main.cpp  test.cpp
